--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.liquibase.url=jdbc:mysql://localhost:3306/pm?serverTimezone=UTC
 spring.liquibase.user=pm
 spring.liquibase.password=pm
 
+jwt.token.secret=jwtappdemo
+jwt.token.expired=3600000
+
